ingress.yaml
# refrenece: https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false" # i thought because of https
spec:
  rules:
  - http:
      paths:
      - path: # the default one
        backend:
          serviceName: main-site
          servicePort: 80
      - path: /office
        backend:
          serviceName: office
          servicePort: 80
      - path: /department
        backend:
          serviceName: department
          servicePort: 80
      - path: /person
        backend:
          serviceName: person
          servicePort: 80
      - path: /role
        backend:
          serviceName: role
          servicePort: 80
